Add RSS feed and fix SEO meta rendering

--- a/src/_includes/blog-post.njk
+++ b/src/_includes/blog-post.njk
@@ -1,6 +1,9 @@
 ---
 layout: layout.njk
 ---
+{% set metaType = "article" %}
+{% set metaImage = featuredImage %}
+{% set metaImageAlt = imageAlt %}
 <article class="blog-post">
   <header class="blog-post-hero">
     <div class="container blog-post-hero-grid">
